# cursach2

./: pyproject.toml
src/: user_interaction.py
src/api/: hh_api.py  vacancy_api.py
src/models/: file_worker.py  vacancy.py
src/savers/: json_saver.py
tests/: test_hh_api.py  test_json_saver.py  test_vacancy.py
