[tool.poetry]
name = "cursach2"
version = "0.1.0"
description = ""
authors = ["Aleksei Anikanov <python_work@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
